--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
 spring.application.name=forum
 
+spring.datasource.url=jdbc:mysql://localhost:3307/forum
+spring.datasource.username=root
+spring.datasource.password=coti
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+# ===============================
+# = JPA / HIBERNATE
+# ===============================
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
