--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
-spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+
+
+spring.datasource.initialization-mode=never
