--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.jpa.hibernate.ddl-auto=none
 
 
 spring.datasource.initialization-mode=never
+
+api.security.token.secret=${JWT_SECRET:12345678}
